--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "dotenv": "^4.0.0",
     "eslint": "^4.16.0",
     "eslint-config-google": "^0.9.1",
     "eslint-config-standard": "^11.0.0-beta.0",
