adicionando o helper way para as rotas

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-MYSQL_HOST=YOUR_HOST
-MYSQL_USER=YOUR_USER
-MYSQL_PASSWORD=YOUR_PASSWORD
-MYSQL_DATABASE=YOUR_DATABASE
+MYSQL_HOST=localhost
+MYSQL_USER=root
+MYSQL_PASSWORD=jWNIOR123
+MYSQL_DATABASE=js_resful_webservice
