--- a/package.json
+++ b/package.json
@@ -4,26 +4,34 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon src/index.js",
-    "test": "ava --verbose"
+    "build": "babel ./src --out-dir dist/ --ignore ./node_modules,./.babelrc,./package.json,./npm-debug.log --copy-files",
+    "dev": "nodemon ./dist/app"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "ava": "^0.25.0",
+    "babel-cli": "^6.26.0",
+    "babel-plugin-dynamic-import-node": "^1.2.0",
+    "babel-preset-env": "^1.6.1",
     "dotenv": "^4.0.0",
     "eslint": "^4.16.0",
-    "eslint-config-google": "^0.9.1",
     "eslint-config-standard": "^11.0.0-beta.0",
     "eslint-plugin-import": "^2.8.0",
     "eslint-plugin-node": "^5.2.1",
     "eslint-plugin-promise": "^3.6.0",
     "eslint-plugin-standard": "^3.0.1",
     "mysql": "^2.15.0",
-    "restify": "^6.3.4"
+    "restify": "^6.3.4",
+    "sha1": "^1.1.1"
   },
   "dependencies": {
-    "restify-cors-middleware": "^1.1.0"
+    "restify-cors-middleware": "^1.1.0",
+    "boom": "^5.2.0",
+    "filter-files": "^0.4.0",
+    "is-directory": "^0.3.1",
+    "lodash": "^4.17.4",
+    "restify": "^6.0.0",
+    "table": "^4.0.1"
   }
 }
