--- a/package.json
+++ b/package.json
@@ -5,15 +5,17 @@
   "main": "index.js",
   "scripts": {
     "build": "babel ./src --out-dir dist/ --ignore ./node_modules,./.babelrc,./package.json,./npm-debug.log --copy-files",
-    "dev": "nodemon ./dist/app"
+    "start": "babel-node src/index"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "author": "Jr Silva",
+  "license": "Commercial",
   "devDependencies": {
+    "babel": "^6.23.0",
     "babel-cli": "^6.26.0",
-    "babel-plugin-dynamic-import-node": "^1.2.0",
     "babel-preset-env": "^1.6.1",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-watch": "^2.0.7",
+    "chai": "^4.1.2",
     "dotenv": "^4.0.0",
     "eslint": "^4.16.0",
     "eslint-config-standard": "^11.0.0-beta.0",
@@ -21,17 +23,17 @@
     "eslint-plugin-node": "^5.2.1",
     "eslint-plugin-promise": "^3.6.0",
     "eslint-plugin-standard": "^3.0.1",
-    "mysql": "^2.15.0",
-    "restify": "^6.3.4",
-    "sha1": "^1.1.1"
+    "mocha": "^5.0.1",
+    "nodemon": "^1.15.1",
+    "sha1": "^1.1.1",
+    "supertest": "^3.0.0",
+    "table": "^4.0.1"
   },
   "dependencies": {
-    "restify-cors-middleware": "^1.1.0",
     "boom": "^5.2.0",
+    "express": "^4.16.2",
     "filter-files": "^0.4.0",
     "is-directory": "^0.3.1",
-    "lodash": "^4.17.4",
-    "restify": "^6.0.0",
-    "table": "^4.0.1"
+    "lodash": "^4.17.4"
   }
 }
