--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "main": "index.js",
   "scripts": {
     "build": "babel ./src --out-dir dist/ --ignore ./node_modules,./.babelrc,./package.json,./npm-debug.log --copy-files",
-    "start": "babel-node src/index"
+    "start": "babel-node src/index",
+    "test:integration": "mocha --opts src/tests/integration/mocha.opts src/tests/integration/*.js",
+    "lint": "eslint '**/*.js'",
+    "lint:fix": "eslint '**/*.js' --fix"
   },
   "author": "Jr Silva",
   "license": "Commercial",
@@ -17,11 +20,14 @@
     "babel-watch": "^2.0.7",
     "chai": "^4.1.2",
     "dotenv": "^4.0.0",
-    "eslint": "^4.16.0",
+    "eslint": "^4.18.0",
+    "eslint-config-airbnb": "^16.1.0",
     "eslint-config-standard": "^11.0.0-beta.0",
     "eslint-plugin-import": "^2.8.0",
+    "eslint-plugin-jsx-a11y": "^6.0.3",
     "eslint-plugin-node": "^5.2.1",
     "eslint-plugin-promise": "^3.6.0",
+    "eslint-plugin-react": "^7.6.1",
     "eslint-plugin-standard": "^3.0.1",
     "mocha": "^5.0.1",
     "nodemon": "^1.15.1",
@@ -30,10 +36,12 @@
     "table": "^4.0.1"
   },
   "dependencies": {
+    "body-parser": "^1.18.2",
     "boom": "^5.2.0",
     "express": "^4.16.2",
     "filter-files": "^0.4.0",
     "is-directory": "^0.3.1",
-    "lodash": "^4.17.4"
+    "lodash": "^4.17.4",
+    "sequelize": "^4.33.4"
   }
 }
