--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,3 +1,9 @@
 {
-  "extends": "airbnb"
+  "extends": "airbnb",
+  "globals": {
+    "describe": true,
+    "it": true,
+    "expect": true,
+    "app": true
+  }
 }
