alterações no way de rotas. Correção de bugs

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,9 +1,3 @@
 {
-  "extends": "airbnb",
-  "globals": {
-    "describe": true,
-    "it": true,
-    "expect": true,
-    "app": true
-  }
+    "extends": "airbnb-base"
 }
