bugs do export das rotas totalmente solucionados. Autoload dos outros módulos adicionado

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,3 +1,10 @@
 {
-    "extends": "airbnb-base"
+    "extends": "airbnb-base",
+    "globals": {
+      "request": true,
+      "describe": true,
+      "it": true,
+      "expect": true,
+      "beforeEach": true
+    }
 }
