--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "webservice",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
     "build": "babel ./src --out-dir dist/ --ignore ./node_modules,./.babelrc,./package.json,./npm-debug.log --copy-files",
     "start": "babel-node src/index",
@@ -38,10 +38,14 @@
   "dependencies": {
     "body-parser": "^1.18.2",
     "boom": "^5.2.0",
+    "consign": "^0.1.6",
+    "cuid": "^2.1.0",
     "express": "^4.16.2",
     "filter-files": "^0.4.0",
     "is-directory": "^0.3.1",
     "lodash": "^4.17.4",
-    "sequelize": "^4.33.4"
+    "nanoid": "^1.0.2",
+    "sequelize": "^4.33.4",
+    "uuid": "^3.2.1"
   }
 }
