--- a/package.json
+++ b/package.json
@@ -17,8 +17,6 @@
     "babel-preset-env": "^1.6.1",
     "babel-preset-es2015": "^6.24.1",
     "babel-watch": "^2.0.7",
-    "chai": "^4.1.2",
-    "dotenv": "^4.0.0",
     "eslint": "^4.18.0",
     "eslint-config-airbnb": "^16.1.0",
     "eslint-config-airbnb-base": "^12.1.0",
@@ -31,11 +29,13 @@
     "eslint-plugin-standard": "^3.0.1",
     "mocha": "^5.0.1",
     "nodemon": "^1.15.1",
-    "sha1": "^1.1.1",
-    "supertest": "^3.0.0",
-    "table": "^4.0.1"
+    "sha1": "^1.1.1"
   },
   "dependencies": {
+    "table": "^4.0.1",
+    "dotenv": "^4.0.0",
+    "chai": "^4.1.2",
+    "supertest": "^3.0.0",
     "body-parser": "^1.18.2",
     "boom": "^5.2.0",
     "consign": "^0.1.6",
