--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
   "author": "Jr Silva",
   "license": "Commercial",
   "devDependencies": {
+    "babel": "^6.23.0",
     "babel-cli": "^6.26.0",
-    "babel-preset-env": "^1.6.1",
     "babel-preset-es2015": "^6.24.1",
     "babel-watch": "^2.0.7",
     "eslint": "^4.18.0",
@@ -29,26 +29,26 @@
     "eslint-plugin-react": "^7.6.1",
     "eslint-plugin-standard": "^3.0.1",
     "mocha": "^5.0.1",
-    "nodemon": "^1.15.1",
-    "sha1": "^1.1.1"
+    "nodemon": "^1.18.4",
+    "sha1": "^1.1.1",
+    "table": "^4.0.1"
   },
   "dependencies": {
-    "bcrypt": "^1.0.3",
     "body-parser": "^1.18.2",
     "boom": "^5.2.0",
     "chai": "^4.1.2",
     "consign": "^0.1.6",
+    "cors": "^2.8.4",
     "dotenv": "^4.0.0",
     "express": "^4.16.2",
     "filter-files": "^0.4.0",
     "is-directory": "^0.3.1",
     "jsonwebtoken": "^8.2.0",
-    "lodash": "^4.17.4",
+    "lodash": "^4.17.11",
+    "mongodb": "^3.0.3",
     "mongoose": "^5.0.7",
     "nanoid": "^1.0.2",
     "sequelize": "^4.33.4",
-    "supertest": "^3.0.0",
-    "table": "^4.0.1",
-    "uuid": "^3.2.1"
+    "supertest": "^3.0.0"
   }
 }
